--- a/frontend/app/src/App.css
+++ b/frontend/app/src/App.css
@@ -1,9 +1,20 @@
+*{
+  background-color:#282c34;
+}
+
 .App {
   text-align: center;
 }
+.App-body {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin-top: 40vh;
+}
 
 .App-logo {
-  height: 40vmin;
+  background-color: transparent;
+  height: 10vmin;
   pointer-events: none;
 }
 
@@ -13,19 +24,44 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App-header { 
+  min-height: 20vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  
 }
-
 .App-link {
   color: #61dafb;
+}
+
+.Header-text {
+  color:white;
+  font-size: 100px;
+  justify-content: center;
+  vertical-align: bottom;
+}
+
+.Guest_button{
+  border-color: transparent;
+  background-color: white;
+  border-radius: 25vh;
+  color: black;
+  height: 5vh;
+  width: 15vw;
+  margin: 1vh;
+}
+
+.Spotify_button{
+  border-color: transparent;
+  background-color: #1DB954;
+  border-radius: 25vh;
+  color: white;
+  height: 5vh;
+  width: 15vw;
+  margin: 1vh;
 }
 
 @keyframes App-logo-spin {
